# meshopt-rs

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: with_input.rs
examples/demo/: main.rs  nanite.rs
src/: cluster.rs  overdraw.rs  simplify.rs
src/index/: buffer.rs  generator.rs
src/vertex/: filter.rs
