[package]
name = "meshopt-rs"
version = "0.1.2"
authors = ["yzsolt"]
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Pure Rust implementation of the meshoptimizer library"
repository = "https://github.com/yzsolt/meshopt-rs"
categories = [
    "algorithms",
    "encoding",
    "game-development",
    "graphics",
    "rendering::data-formats",
]
keywords = ["gamedev", "graphics", "meshing", "meshopt"]

[features]
# Experimental APIs have unstable interface and might have implementation that's not fully tested or optimized
experimental = []
# Provides additional logging, useful for debugging
trace = []

[dependencies]
bitflags = "2.10.0"

[dev-dependencies]
miniz_oxide = "0.8.9"
tobj = "4.0.3"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies.criterion]
version = "0.7.0"

[target.'cfg(target_family = "wasm")'.dev-dependencies.criterion]
version = "0.7.0"
default-features = false
# Default features, excluding `rayon` which isn't supported on WASM
features = ["plotters", "cargo_bench_support"]

[[bench]]
name = "with_input"
harness = false

[[bin]]
name = "codec_bench"
required-features = ["experimental"]
path = "bin/codec_bench.rs"
